Fixed issue where parent using align-items: center caused incorrect layout by adding height: 100% in divider-y.

--- a/src/components/divider/direction.css
+++ b/src/components/divider/direction.css
@@ -12,4 +12,6 @@
     --divider--height: 100%;
     --divider--flex-direction: column;
     --divider--margin: 0 1rem;
+
+    height: 100%;
 }
